add_executable(Rasterizer)
set_target_properties(Rasterizer PROPERTIES CXX_STANDARD 20)
set_target_properties(Rasterizer PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(Rasterizer PROPERTIES CXX_EXTENSIONS OFF)

# TODO: When refactoring application, parsers etc. add subfolder cml and link to this
target_sources(
        Rasterizer
        PRIVATE
        Main.cpp
)

target_include_directories(
        Rasterizer
        PRIVATE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)

target_link_libraries(
        Rasterizer
        PRIVATE
        FGM
        SDL3::SDL3
        fast_float
        StrictWarnings
        ProjectSanitizers
)

# Copy models directory to the build directory
add_custom_command(
        TARGET Rasterizer
        POST_BUILD
        # Create the directory
        COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:Rasterizer>/models"
        # Copy files into the target directory
        COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${CMAKE_CURRENT_SOURCE_DIR}/assets/models"
        "$<TARGET_FILE_DIR:Rasterizer>/models"

        COMMENT "Copying models to build directory"
)